--- a/lightbox.css
+++ b/lightbox.css
@@ -109,7 +109,7 @@ html.lb-disable-scrolling {
   width: 25%;
   left: 0;
   float: left;
-  background: url(../images/prev.png) left 50% no-repeat;
+  background: url(images/prev.png) left 50% no-repeat;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   -webkit-transition: opacity 0.2s;
@@ -127,7 +127,7 @@ html.lb-disable-scrolling {
   width: 30%;
   right: 0;
   float: right;
-  background: url(../images/next.png) right 50% no-repeat;
+  background: url(images/next.png) right 50% no-repeat;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   -webkit-transition: opacity 0.2s;
