--- a/solar_system.css
+++ b/solar_system.css
@@ -23,6 +23,13 @@ body {
 
   /* Flex */
 
+.flexRow {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: flex-start;
+  justify-content: left;
+}
 .flexRow-sa {
   display: flex;
   flex-direction: row;
@@ -522,11 +529,22 @@ td {
   vertical-align: top;
   text-align: left;
   white-space: normal;
-  border: 0.1rem solid #c5a267;
+  border-top-width: 0.1rem;
+  border-right-width: 0.1rem;
+  border-bottom-width: 0;
+  border-left-width: 0.1rem;
+  border-top-style: solid;
+  border-right-style: solid;
+  border-bottom-style: none;
+  border-left-style: solid;
+  border-top-color: #c5a267;
+  border-right-color: #c5a267;
+  border-bottom-color: none;
+  border-left-color: #c5a267;
   cursor: default;
   z-index: 0;
-
 }
+
 .tdHead {
   font: 0.9rem Verdana, sans-serif;
   color: #c5a267;
@@ -595,7 +613,7 @@ td {
 /* Table Background Color */
 
 .trColor {
-  background-color: #232323;
+  background-color: #2d2d2d;
 }
 
 /* Footer */
